// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News card component should match snapshot for a blog post 1`] = `
<div>
  <article
    class="newsCard "
  >
    <a
      aria-hidden="true"
      class="imageContainer"
      href="/i/am/a-very-full-slug"
      style="background-image: url(https://placekitten.com/200/139/m/868x0/filters:quality%2880%29);"
      tabindex="-1"
    >
       
    </a>
    <div>
      <h3
        class="heading"
      >
        <a
          href="/i/am/a-very-full-slug"
        >
          Test blog post title
        </a>
      </h3>
      <p>
        Let's play Blockbusters!
      </p>
      <footer>
        <div
          class="author"
        >
          <p
            class="author"
          >
            by 
            Bob Holness
            , 
            Blockbusters host
          </p>
        </div>
        <div>
          <span
            class="tag tag--outline"
            data-component="tag"
          >
            Blog
          </span>
          <span
            class="date"
          >
            20 February 2024
          </span>
        </div>
      </footer>
    </div>
  </article>
</div>
`;

exports[`News card component should match snapshot for a news article 1`] = `
<div>
  <article
    class="newsCard "
  >
    <a
      aria-hidden="true"
      class="imageContainer"
      href="/i/am/a-very-full-slug"
      style="background-image: url(https://placekitten.com/200/286/m/868x0/filters:quality%2880%29);"
      tabindex="-1"
    >
       
    </a>
    <div>
      <h3
        class="heading"
      >
        <a
          href="/i/am/a-very-full-slug"
        >
          Test news article title
        </a>
      </h3>
      <p>
        Test intro text
      </p>
      <footer>
        <div>
          <span
            class="tag tag--outline"
            data-component="tag"
          >
            News
          </span>
          <span
            class="date"
          >
            31 January 2024
          </span>
        </div>
      </footer>
    </div>
  </article>
</div>
`;
